# otserv

./: .gitignore  .gitmodules  CMakeLists.txt  README  config.lua
db/: schema.mysql  schema.pgsql  schema.sqlite
src/: combat.h  npc.cpp  npc.h
